Revert "Integrate threat intel feeds (#669) (#690)"
This reverts commit 559d97eb4e14a3c7e3be7a7293942dc0af5713e6.

Signed-off-by: Joanne Wang <jowg@amazon.com>