@@ -32,7 +32,6 @@ import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import static java.util.Collections.emptyList;
 import static org.opensearch.securityanalytics.TestHelpers.randomAggregationRule;
 import static org.opensearch.securityanalytics.TestHelpers.randomDetector;
 import static org.opensearch.securityanalytics.TestHelpers.randomDetectorType;
@@ -50,7 +49,6 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
      * 2. Creates two aggregation rules and assigns to a detector, while removing 5 prepackaged rules
      * 3. Verifies that two bucket level monitor exists
      * 4. Verifies the findings
-     *
      * @throws IOException
      */
     public void testRemoveDocLevelRuleAddAggregationRules_verifyFindings_success() throws IOException {
@@ -105,16 +103,16 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         assertEquals(1, monitorIds.size());
 
         String monitorId = monitorIds.get(0);
-        String monitorType = ((Map<String, String>) entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId))).get("monitor")).get("monitor_type");
+        String monitorType  = ((Map<String, String>) entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId))).get("monitor")).get("monitor_type");
 
         assertEquals(MonitorType.DOC_LEVEL_MONITOR.getValue(), monitorType);
 
         // Create aggregation rules
-        String sumRuleId = createRule(randomAggregationRule("sum", " > 2"));
-        String avgTermRuleId = createRule(randomAggregationRule("avg", " > 1"));
+        String sumRuleId = createRule(randomAggregationRule( "sum", " > 2"));
+        String avgTermRuleId = createRule(randomAggregationRule( "avg", " > 1"));
         // Update detector and empty doc level rules so detector contains only one aggregation rule
         DetectorInput input = new DetectorInput("windows detector for security analytics", List.of("windows"), List.of(new DetectorRule(sumRuleId), new DetectorRule(avgTermRuleId)),
-                emptyList());
+                Collections.emptyList());
         Detector updatedDetector = randomDetectorWithInputs(List.of(input));
 
         Response updateResponse = makeRequest(client(), "PUT", SecurityAnalyticsPlugin.DETECTOR_BASE_URI + "/" + detectorId, Collections.emptyMap(), toHttpEntity(updatedDetector));
@@ -135,8 +133,8 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         indexDoc(index, "2", randomDoc(3, 4, "Info"));
 
         // Execute two bucket level monitors
-        for (String id : monitorIds) {
-            monitorType = ((Map<String, String>) entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + id))).get("monitor")).get("monitor_type");
+        for(String id: monitorIds){
+            monitorType  = ((Map<String, String>) entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + id))).get("monitor")).get("monitor_type");
             Assert.assertEquals(MonitorType.BUCKET_LEVEL_MONITOR.getValue(), monitorType);
             executeAlertingMonitor(id, Collections.emptyMap());
         }
@@ -151,24 +149,24 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         List<String> aggRuleIds = List.of(sumRuleId, avgTermRuleId);
 
-        List<Map<String, Object>> findings = (List) getFindingsBody.get("findings");
-        for (Map<String, Object> finding : findings) {
-            Set<String> aggRulesFinding = ((List<Map<String, Object>>) finding.get("queries")).stream().map(it -> it.get("id").toString()).collect(
+        List<Map<String, Object>> findings = (List)getFindingsBody.get("findings");
+        for(Map<String, Object> finding : findings) {
+            Set<String> aggRulesFinding = ((List<Map<String, Object>>)finding.get("queries")).stream().map(it -> it.get("id").toString()).collect(
                     Collectors.toSet());
             // Bucket monitor finding will have one rule
             String aggRuleId = aggRulesFinding.iterator().next();
 
             assertTrue(aggRulesFinding.contains(aggRuleId));
 
-            List<String> findingDocs = (List<String>) finding.get("related_doc_ids");
+            List<String> findingDocs = (List<String>)finding.get("related_doc_ids");
             Assert.assertEquals(2, findingDocs.size());
             assertTrue(Arrays.asList("1", "2").containsAll(findingDocs));
         }
 
-        String findingDetectorId = ((Map<String, Object>) ((List) getFindingsBody.get("findings")).get(0)).get("detectorId").toString();
+        String findingDetectorId = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("detectorId").toString();
         assertEquals(detectorId, findingDetectorId);
 
-        String findingIndex = ((Map<String, Object>) ((List) getFindingsBody.get("findings")).get(0)).get("index").toString();
+        String findingIndex = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("index").toString();
         assertEquals(index, findingIndex);
     }
 
@@ -177,7 +175,6 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
      * 2. Creates 5 prepackaged doc level rules and one custom doc level rule and removes the aggregation rule
      * 3. Verifies that one doc level monitor exists
      * 4. Verifies the findings
-     *
      * @throws IOException
      */
     public void testReplaceAggregationRuleWithDocRule_verifyFindings_success() throws IOException {
@@ -197,10 +194,10 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         assertEquals(HttpStatus.SC_OK, createMappingResponse.getStatusLine().getStatusCode());
 
-        String maxRuleId = createRule(randomAggregationRule("max", " > 2"));
+        String maxRuleId = createRule(randomAggregationRule( "max", " > 2"));
         List<DetectorRule> detectorRules = List.of(new DetectorRule(maxRuleId));
         DetectorInput input = new DetectorInput("windows detector for security analytics", List.of("windows"), detectorRules,
-                emptyList());
+                Collections.emptyList());
         Detector detector = randomDetectorWithInputs(List.of(input));
         Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
 
@@ -231,7 +228,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         Map<String, Object> detectorAsMap = (Map<String, Object>) hit.getSourceAsMap().get("detector");
         String monitorId = ((List<String>) (detectorAsMap).get("monitor_id")).get(0);
 
-        String monitorType = ((Map<String, String>) entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId))).get("monitor")).get("monitor_type");
+        String monitorType  = ((Map<String, String>) entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId))).get("monitor")).get("monitor_type");
 
         assertEquals(MonitorType.BUCKET_LEVEL_MONITOR.getValue(), monitorType);
 
@@ -258,7 +255,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         assertEquals(1, monitorIds.size());
 
         monitorId = monitorIds.get(0);
-        monitorType = ((Map<String, String>) entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId))).get("monitor")).get("monitor_type");
+        monitorType  = ((Map<String, String>) entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId))).get("monitor")).get("monitor_type");
 
         assertEquals(MonitorType.DOC_LEVEL_MONITOR.getValue(), monitorType);
 
@@ -295,15 +292,15 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         Set<String> docRuleIds = new HashSet<>(prepackagedRules);
         docRuleIds.add(randomDocRuleId);
 
-        List<Map<String, Object>> findings = (List) getFindingsBody.get("findings");
+        List<Map<String, Object>> findings = (List)getFindingsBody.get("findings");
         List<String> foundDocIds = new ArrayList<>();
-        for (Map<String, Object> finding : findings) {
-            Set<String> aggRulesFinding = ((List<Map<String, Object>>) finding.get("queries")).stream().map(it -> it.get("id").toString()).collect(
+        for(Map<String, Object> finding : findings) {
+            Set<String> aggRulesFinding = ((List<Map<String, Object>>)finding.get("queries")).stream().map(it -> it.get("id").toString()).collect(
                     Collectors.toSet());
 
             assertTrue(docRuleIds.containsAll(aggRulesFinding));
 
-            List<String> findingDocs = (List<String>) finding.get("related_doc_ids");
+            List<String> findingDocs = (List<String>)finding.get("related_doc_ids");
             Assert.assertEquals(1, findingDocs.size());
             foundDocIds.addAll(findingDocs);
         }
@@ -368,11 +365,11 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         assertEquals(1, monitorIds.size());
 
         String monitorId = monitorIds.get(0);
-        String monitorType = ((Map<String, String>) entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId))).get("monitor")).get("monitor_type");
+        String monitorType  = ((Map<String, String>) entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId))).get("monitor")).get("monitor_type");
 
         assertEquals(MonitorType.DOC_LEVEL_MONITOR.getValue(), monitorType);
 
-        Detector updatedDetector = randomDetector(emptyList());
+        Detector updatedDetector = randomDetector(Collections.emptyList());
         Response updateResponse = makeRequest(client(), "PUT", SecurityAnalyticsPlugin.DETECTOR_BASE_URI + "/" + detectorId, Collections.emptyMap(), toHttpEntity(updatedDetector));
 
         assertEquals("Update detector failed", RestStatus.OK, restStatus(updateResponse));
@@ -416,7 +413,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         String sumRuleId = createRule(randomAggregationRule("sum", " > 1"));
         List<DetectorRule> detectorRules = List.of(new DetectorRule(sumRuleId));
         DetectorInput input = new DetectorInput("windows detector for security analytics", List.of("windows"), detectorRules,
-                emptyList());
+                Collections.emptyList());
         Detector detector = randomDetectorWithInputs(List.of(input));
         Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
 
@@ -424,7 +421,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         Map<String, Object> responseBody = asMap(createResponse);
         String detectorId = responseBody.get("_id").toString();
-        String request = "{\n" +
+        String  request = "{\n" +
                 "   \"query\" : {\n" +
                 "     \"match\":{\n" +
                 "        \"_id\": \"" + detectorId + "\"\n" +
@@ -434,15 +431,15 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
         SearchHit hit = hits.get(0);
-        Map<String, List> detectorMap = (HashMap<String, List>) (hit.getSourceAsMap().get("detector"));
+        Map<String, List> detectorMap = (HashMap<String,List>)(hit.getSourceAsMap().get("detector"));
         List inputArr = detectorMap.get("inputs");
 
         assertEquals(1, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
 
         // Test adding the new max monitor and updating the existing sum monitor
-        String maxRuleId = createRule(randomAggregationRule("max", " > 3"));
+        String maxRuleId =  createRule(randomAggregationRule("max", " > 3"));
         DetectorInput newInput = new DetectorInput("windows detector for security analytics", List.of("windows"), List.of(new DetectorRule(maxRuleId), new DetectorRule(sumRuleId)),
-                emptyList());
+                Collections.emptyList());
         Detector updatedDetector = randomDetectorWithInputs(List.of(newInput));
         Response updateResponse = makeRequest(client(), "PUT", SecurityAnalyticsPlugin.DETECTOR_BASE_URI + "/" + detectorId, Collections.emptyMap(), toHttpEntity(updatedDetector));
 
@@ -450,7 +447,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         hits = executeSearch(Detector.DETECTORS_INDEX, request);
         hit = hits.get(0);
-        Map<String, List> updatedDetectorMap = (HashMap<String, List>) (hit.getSourceAsMap().get("detector"));
+        Map<String, List> updatedDetectorMap = (HashMap<String,List>)(hit.getSourceAsMap().get("detector"));
         inputArr = updatedDetectorMap.get("inputs");
 
         assertEquals(2, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
@@ -462,8 +459,8 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         indexDoc(index, "1", randomDoc(2, 4, "Info"));
         indexDoc(index, "2", randomDoc(3, 4, "Info"));
 
-        for (String monitorId : monitorIds) {
-            Map<String, String> monitor = (Map<String, String>) (entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId)))).get("monitor");
+        for(String monitorId: monitorIds) {
+            Map<String, String> monitor  = (Map<String, String>)(entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId)))).get("monitor");
             assertEquals(MonitorType.BUCKET_LEVEL_MONITOR.getValue(), monitor.get("monitor_type"));
             executeAlertingMonitor(monitorId, Collections.emptyMap());
         }
@@ -489,10 +486,10 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         assertEquals(2, findingDocs.size());
         assertTrue(Arrays.asList("1", "2").containsAll(findingDocs));
 
-        String findingDetectorId = ((Map<String, Object>) ((List) getFindingsBody.get("findings")).get(0)).get("detectorId").toString();
+        String findingDetectorId = ((Map<String, Object>)((List) getFindingsBody.get("findings")).get(0)).get("detectorId").toString();
         assertEquals(detectorId, findingDetectorId);
 
-        String findingIndex = ((Map<String, Object>) ((List) getFindingsBody.get("findings")).get(0)).get("index").toString();
+        String findingIndex = ((Map<String, Object>)((List) getFindingsBody.get("findings")).get(0)).get("index").toString();
         assertEquals(index, findingIndex);
     }
 
@@ -528,7 +525,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         List<DetectorRule> detectorRules = aggRuleIds.stream().map(DetectorRule::new).collect(Collectors.toList());
         DetectorInput input = new DetectorInput("windows detector for security analytics", List.of("windows"), detectorRules,
-                emptyList());
+                Collections.emptyList());
         Detector detector = randomDetectorWithInputs(List.of(input));
         Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
 
@@ -536,7 +533,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         Map<String, Object> responseBody = asMap(createResponse);
         String detectorId = responseBody.get("_id").toString();
-        String request = "{\n" +
+        String  request = "{\n" +
                 "   \"query\" : {\n" +
                 "     \"match\":{\n" +
                 "        \"_id\": \"" + detectorId + "\"\n" +
@@ -546,14 +543,14 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
         SearchHit hit = hits.get(0);
-        Map<String, List> detectorMap = (HashMap<String, List>) (hit.getSourceAsMap().get("detector"));
+        Map<String, List> detectorMap = (HashMap<String,List>)(hit.getSourceAsMap().get("detector"));
         List inputArr = detectorMap.get("inputs");
 
         assertEquals(2, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
 
         // Test deleting the aggregation rule
         DetectorInput newInput = new DetectorInput("windows detector for security analytics", List.of("windows"), List.of(new DetectorRule(avgRuleId)),
-                emptyList());
+                Collections.emptyList());
         detector = randomDetectorWithInputs(List.of(newInput));
         Response updateResponse = makeRequest(client(), "PUT", SecurityAnalyticsPlugin.DETECTOR_BASE_URI + "/" + detectorId, Collections.emptyMap(), toHttpEntity(detector));
 
@@ -561,7 +558,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         hits = executeSearch(Detector.DETECTORS_INDEX, request);
         hit = hits.get(0);
-        Map<String, List> updatedDetectorMap = (HashMap<String, List>) (hit.getSourceAsMap().get("detector"));
+        Map<String, List> updatedDetectorMap = (HashMap<String,List>)(hit.getSourceAsMap().get("detector"));
         inputArr = updatedDetectorMap.get("inputs");
 
         assertEquals(1, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
@@ -575,7 +572,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         assertEquals(1, monitorIds.size());
 
-        Map<String, String> monitor = (Map<String, String>) (entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorIds.get(0))))).get("monitor");
+        Map<String, String> monitor  = (Map<String, String>)(entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorIds.get(0))))).get("monitor");
 
         assertEquals(MonitorType.BUCKET_LEVEL_MONITOR.getValue(), monitor.get("monitor_type"));
 
@@ -604,10 +601,10 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         assertEquals(2, findingDocs.size());
         assertTrue(Arrays.asList("1", "2").containsAll(findingDocs));
 
-        String findingDetectorId = ((Map<String, Object>) ((List) getFindingsBody.get("findings")).get(0)).get("detectorId").toString();
+        String findingDetectorId = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("detectorId").toString();
         assertEquals(detectorId, findingDetectorId);
 
-        String findingIndex = ((Map<String, Object>) ((List) getFindingsBody.get("findings")).get(0)).get("index").toString();
+        String findingIndex = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("index").toString();
         assertEquals(index, findingIndex);
     }
 
@@ -617,7 +614,6 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
      * 3. Verifies that number of rules is unchanged
      * 4. Verifies monitor types
      * 5. Verifies findings
-     *
      * @throws IOException
      */
     public void testReplaceAggregationRule_verifyFindings_success() throws IOException {
@@ -653,7 +649,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         Map<String, Object> responseBody = asMap(createResponse);
         String detectorId = responseBody.get("_id").toString();
-        String request = "{\n" +
+        String  request = "{\n" +
                 "   \"query\" : {\n" +
                 "     \"match\":{\n" +
                 "        \"_id\": \"" + detectorId + "\"\n" +
@@ -663,7 +659,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
         SearchHit hit = hits.get(0);
-        Map<String, List> detectorMap = (HashMap<String, List>) (hit.getSourceAsMap().get("detector"));
+        Map<String, List> detectorMap = (HashMap<String,List>)(hit.getSourceAsMap().get("detector"));
         List inputArr = detectorMap.get("inputs");
 
         assertEquals(2, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
@@ -679,7 +675,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         hits = executeSearch(Detector.DETECTORS_INDEX, request);
         hit = hits.get(0);
-        Map<String, List> updatedDetectorMap = (HashMap<String, List>) (hit.getSourceAsMap().get("detector"));
+        Map<String, List> updatedDetectorMap = (HashMap<String,List>)(hit.getSourceAsMap().get("detector"));
         inputArr = updatedDetectorMap.get("inputs");
 
         assertEquals(2, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
@@ -692,8 +688,8 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         indexDoc(index, "2", randomDoc(3, 4, "Info"));
         indexDoc(index, "3", randomDoc(3, 4, "Test"));
         Map<String, Integer> numberOfMonitorTypes = new HashMap<>();
-        for (String monitorId : monitorIds) {
-            Map<String, String> monitor = (Map<String, String>) (entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId)))).get("monitor");
+        for(String monitorId: monitorIds) {
+            Map<String, String> monitor  = (Map<String, String>)(entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId)))).get("monitor");
             numberOfMonitorTypes.merge(monitor.get("monitor_type"), 1, Integer::sum);
             executeAlertingMonitor(monitorId, Collections.emptyMap());
         }
@@ -709,27 +705,27 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         assertNotNull(getFindingsBody);
         assertEquals(5, getFindingsBody.get("total_findings"));
 
-        String findingDetectorId = ((Map<String, Object>) ((List) getFindingsBody.get("findings")).get(0)).get("detectorId").toString();
+        String findingDetectorId = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("detectorId").toString();
         assertEquals(detectorId, findingDetectorId);
 
-        String findingIndex = ((Map<String, Object>) ((List) getFindingsBody.get("findings")).get(0)).get("index").toString();
+        String findingIndex = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("index").toString();
         assertEquals(index, findingIndex);
 
         List<String> docLevelFinding = new ArrayList<>();
-        List<Map<String, Object>> findings = (List) getFindingsBody.get("findings");
+        List<Map<String, Object>> findings = (List)getFindingsBody.get("findings");
 
         Set<String> docLevelRules = new HashSet<>(prepackagedDocRules);
 
-        for (Map<String, Object> finding : findings) {
-            List<Map<String, Object>> queries = (List<Map<String, Object>>) finding.get("queries");
+        for(Map<String, Object> finding : findings) {
+            List<Map<String, Object>> queries = (List<Map<String, Object>>)finding.get("queries");
             Set<String> findingRules = queries.stream().map(it -> it.get("id").toString()).collect(Collectors.toSet());
             // In this test case all doc level rules are matching the finding rule ids
-            if (docLevelRules.containsAll(findingRules)) {
-                docLevelFinding.addAll((List<String>) finding.get("related_doc_ids"));
+            if(docLevelRules.containsAll(findingRules)) {
+                docLevelFinding.addAll((List<String>)finding.get("related_doc_ids"));
             } else {
                 String aggRuleId = findingRules.iterator().next();
 
-                List<String> findingDocs = (List<String>) finding.get("related_doc_ids");
+                List<String> findingDocs = (List<String>)finding.get("related_doc_ids");
                 Assert.assertEquals(2, findingDocs.size());
                 assertTrue(Arrays.asList("1", "2").containsAll(findingDocs));
             }
@@ -759,7 +755,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         aggRuleIds.add(createRule(randomAggregationRule("min", " > 3", testOpCode)));
         List<DetectorRule> detectorRules = aggRuleIds.stream().map(id -> new DetectorRule(id)).collect(Collectors.toList());
         DetectorInput input = new DetectorInput("windows detector for security analytics", List.of("windows"), detectorRules,
-                emptyList());
+                Collections.emptyList());
         Detector detector = randomDetectorWithInputs(List.of(input));
         Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
 
@@ -767,7 +763,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         Map<String, Object> responseBody = asMap(createResponse);
         String detectorId = responseBody.get("_id").toString();
-        String request = "{\n" +
+        String  request = "{\n" +
                 "   \"query\" : {\n" +
                 "     \"match\":{\n" +
                 "        \"_id\": \"" + detectorId + "\"\n" +
@@ -777,7 +773,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
         SearchHit hit = hits.get(0);
-        Map<String, List> detectorMap = (HashMap<String, List>) (hit.getSourceAsMap().get("detector"));
+        Map<String, List> detectorMap = (HashMap<String,List>)(hit.getSourceAsMap().get("detector"));
 
         List<String> monitorIds = ((List<String>) (detectorMap).get("monitor_id"));
 
@@ -788,8 +784,8 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         indexDoc(index, "8", randomDoc(1, 1, testOpCode));
 
         Map<String, Integer> numberOfMonitorTypes = new HashMap<>();
-        for (String monitorId : monitorIds) {
-            Map<String, String> monitor = (Map<String, String>) (entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId)))).get("monitor");
+        for (String monitorId: monitorIds) {
+            Map<String, String> monitor  = (Map<String, String>)(entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId)))).get("monitor");
             numberOfMonitorTypes.merge(monitor.get("monitor_type"), 1, Integer::sum);
             executeAlertingMonitor(monitorId, Collections.emptyMap());
         }
@@ -802,17 +798,17 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         assertNotNull(getFindingsBody);
 
-        List<Map<String, Object>> findings = (List) getFindingsBody.get("findings");
+        List<Map<String, Object>> findings = (List)getFindingsBody.get("findings");
         for (Map<String, Object> finding : findings) {
-            List<String> findingDocs = (List<String>) finding.get("related_doc_ids");
+            List<String> findingDocs = (List<String>)finding.get("related_doc_ids");
             Assert.assertEquals(1, findingDocs.size());
             assertTrue(Arrays.asList("7").containsAll(findingDocs));
         }
 
-        String findingDetectorId = ((Map<String, Object>) ((List) getFindingsBody.get("findings")).get(0)).get("detectorId").toString();
+        String findingDetectorId = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("detectorId").toString();
         assertEquals(detectorId, findingDetectorId);
 
-        String findingIndex = ((Map<String, Object>) ((List) getFindingsBody.get("findings")).get(0)).get("index").toString();
+        String findingIndex = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("index").toString();
         assertEquals(index, findingIndex);
     }
 
@@ -847,10 +843,10 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         // 5 custom aggregation rules
         String sumRuleId = createRule(randomAggregationRule("sum", " > 1", infoOpCode));
-        String maxRuleId = createRule(randomAggregationRule("max", " > 3", testOpCode));
-        String minRuleId = createRule(randomAggregationRule("min", " > 3", testOpCode));
-        String avgRuleId = createRule(randomAggregationRule("avg", " > 3", infoOpCode));
-        String cntRuleId = createRule(randomAggregationRule("count", " > 3", "randomTestCode"));
+        String maxRuleId =  createRule(randomAggregationRule("max", " > 3", testOpCode));
+        String minRuleId =  createRule(randomAggregationRule("min", " > 3", testOpCode));
+        String avgRuleId =  createRule(randomAggregationRule("avg", " > 3", infoOpCode));
+        String cntRuleId =  createRule(randomAggregationRule("count", " > 3", "randomTestCode"));
         List<String> aggRuleIds = List.of(sumRuleId, maxRuleId);
         String randomDocRuleId = createRule(randomRule());
         List<String> prepackagedRules = getRandomPrePackagedRules();
@@ -863,6 +859,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         Detector detector = randomDetectorWithInputs(List.of(input));
 
         Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
+
 
 
         String request = "{\n" +
@@ -887,7 +884,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
                 "}";
         List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
         SearchHit hit = hits.get(0);
-        Map<String, List> updatedDetectorMap = (HashMap<String, List>) (hit.getSourceAsMap().get("detector"));
+        Map<String, List> updatedDetectorMap = (HashMap<String,List>)(hit.getSourceAsMap().get("detector"));
         List inputArr = updatedDetectorMap.get("inputs");
 
         assertEquals(6, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
@@ -907,8 +904,8 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         Map<String, Integer> numberOfMonitorTypes = new HashMap<>();
 
-        for (String monitorId : monitorIds) {
-            Map<String, String> monitor = (Map<String, String>) (entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId)))).get("monitor");
+        for (String monitorId: monitorIds) {
+            Map<String, String> monitor  = (Map<String, String>)(entityAsMap(client().performRequest(new Request("GET", "/_plugins/_alerting/monitors/" + monitorId)))).get("monitor");
             numberOfMonitorTypes.merge(monitor.get("monitor_type"), 1, Integer::sum);
             Response executeResponse = executeAlertingMonitor(monitorId, Collections.emptyMap());
 
@@ -919,15 +916,16 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
                 // 5 prepackaged and 1 custom doc level rule
                 assertEquals(6, noOfSigmaRuleMatches);
             } else if (MonitorType.BUCKET_LEVEL_MONITOR.getValue().equals(monitor.get("monitor_type"))) {
-                for (String ruleId : aggRuleIds) {
-                    Object rule = (((Map<String, Object>) ((Map<String, Object>) ((List<Object>) ((Map<String, Object>) executeResults.get("input_results")).get("results")).get(0)).get("aggregations")).get(ruleId));
-                    if (rule != null) {
-                        if (ruleId == sumRuleId) {
-                            assertRuleMonitorFinding(executeResults, ruleId, 3, List.of("4"));
+                for(String ruleId: aggRuleIds) {
+                    Object rule = (((Map<String,Object>)((Map<String, Object>)((List<Object>)((Map<String, Object>)executeResults.get("input_results")).get("results")).get(0)).get("aggregations")).get(ruleId));
+                    if(rule != null) {
+                        if(ruleId == sumRuleId) {
+                            assertRuleMonitorFinding(executeResults, ruleId,3, List.of("4"));
                         } else if (ruleId == maxRuleId) {
-                            assertRuleMonitorFinding(executeResults, ruleId, 5, List.of("2", "3"));
-                        } else if (ruleId == minRuleId) {
-                            assertRuleMonitorFinding(executeResults, ruleId, 1, List.of("2"));
+                            assertRuleMonitorFinding(executeResults, ruleId,5, List.of("2", "3"));
+                        }
+                        else if (ruleId == minRuleId) {
+                            assertRuleMonitorFinding(executeResults, ruleId,1,  List.of("2"));
                         }
                     }
                 }
@@ -947,10 +945,10 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         // 8 findings from doc level rules, and 3 findings for aggregation (sum, max and min)
         assertEquals(11, getFindingsBody.get("total_findings"));
 
-        String findingDetectorId = ((Map<String, Object>) ((List) getFindingsBody.get("findings")).get(0)).get("detectorId").toString();
+        String findingDetectorId = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("detectorId").toString();
         assertEquals(detectorId, findingDetectorId);
 
-        String findingIndex = ((Map<String, Object>) ((List) getFindingsBody.get("findings")).get(0)).get("index").toString();
+        String findingIndex = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("index").toString();
         assertEquals(index, findingIndex);
 
         List<String> docLevelFinding = new ArrayList<>();
@@ -959,22 +957,22 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         Set<String> docLevelRules = new HashSet<>(prepackagedRules);
         docLevelRules.add(randomDocRuleId);
 
-        for (Map<String, Object> finding : findings) {
-            List<Map<String, Object>> queries = (List<Map<String, Object>>) finding.get("queries");
+        for(Map<String, Object> finding : findings) {
+            List<Map<String, Object>> queries = (List<Map<String, Object>>)finding.get("queries");
             Set<String> findingRuleIds = queries.stream().map(it -> it.get("id").toString()).collect(Collectors.toSet());
             // Doc level finding matches all doc level rules (including the custom one) in this test case
-            if (docLevelRules.containsAll(findingRuleIds)) {
-                docLevelFinding.addAll((List<String>) finding.get("related_doc_ids"));
+            if(docLevelRules.containsAll(findingRuleIds)) {
+                docLevelFinding.addAll((List<String>)finding.get("related_doc_ids"));
             } else {
                 // In the case of bucket level monitors, queries will always contain one value
                 String aggRuleId = findingRuleIds.iterator().next();
-                List<String> findingDocs = (List<String>) finding.get("related_doc_ids");
+                List<String> findingDocs = (List<String>)finding.get("related_doc_ids");
 
-                if (aggRuleId.equals(sumRuleId)) {
+                if(aggRuleId.equals(sumRuleId)) {
                     assertTrue(List.of("1", "2", "3").containsAll(findingDocs));
-                } else if (aggRuleId.equals(maxRuleId)) {
+                } else if(aggRuleId.equals(maxRuleId)) {
                     assertTrue(List.of("4", "5", "6", "7").containsAll(findingDocs));
-                } else if (aggRuleId.equals(minRuleId)) {
+                } else if(aggRuleId.equals( minRuleId)) {
                     assertTrue(List.of("7").containsAll(findingDocs));
                 }
             }
@@ -1003,11 +1001,11 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         String testOpCode = "Test";
 
-        String maxRuleId = createRule(randomAggregationRule("max", " > 3", testOpCode));
+        String maxRuleId =  createRule(randomAggregationRule("max", " > 3", testOpCode));
         String randomDocRuleId = createRule(randomRule());
         List<DetectorRule> detectorRules = List.of(new DetectorRule(maxRuleId), new DetectorRule(randomDocRuleId));
         DetectorInput input = new DetectorInput("windows detector for security analytics", List.of("windows"), detectorRules,
-                emptyList());
+                Collections.emptyList());
         Detector detector = randomDetectorWithInputs(List.of(input));
 
         Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
@@ -1035,7 +1033,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
                 "}";
         List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
         SearchHit hit = hits.get(0);
-        Map<String, Object> detectorMap = (HashMap<String, Object>) (hit.getSourceAsMap().get("detector"));
+        Map<String, Object> detectorMap = (HashMap<String, Object>)(hit.getSourceAsMap().get("detector"));
         List inputArr = (List) detectorMap.get("inputs");
 
         assertEquals(2, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
@@ -1049,6 +1047,8 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         // Verify workflow
         verifyWorkflow(detectorMap, monitorIds, 2);
     }
+
+
 
     public void testCreateDetector_verifyWorkflowCreation_success_WithGroupByRulesInTrigger() throws IOException {
         updateClusterSetting(ENABLE_WORKFLOW_USAGE.getKey(), "true");
@@ -1070,12 +1070,12 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         String testOpCode = "Test";
 
-        String maxRuleId = createRule(randomAggregationRule("max", " > 3", testOpCode));
+        String maxRuleId =  createRule(randomAggregationRule("max", " > 3", testOpCode));
         String randomDocRuleId = createRule(randomRule());
         List<DetectorRule> detectorRules = List.of(new DetectorRule(maxRuleId), new DetectorRule(randomDocRuleId));
         DetectorInput input = new DetectorInput("windows detector for security analytics", List.of("windows"), detectorRules,
-                emptyList());
-        DetectorTrigger t1 = new DetectorTrigger(null, "test-trigger", "1", List.of(), List.of(maxRuleId), List.of(), List.of(), List.of(), List.of());
+                Collections.emptyList());
+        DetectorTrigger t1 = new DetectorTrigger(null, "test-trigger", "1", List.of(), List.of(maxRuleId), List.of(), List.of(), List.of());
         Detector detector = randomDetectorWithInputsAndTriggers(List.of(input), List.of(t1));
 
         Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
@@ -1103,7 +1103,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
                 "}";
         List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
         SearchHit hit = hits.get(0);
-        Map<String, Object> detectorMap = (HashMap<String, Object>) (hit.getSourceAsMap().get("detector"));
+        Map<String, Object> detectorMap = (HashMap<String, Object>)(hit.getSourceAsMap().get("detector"));
         List inputArr = (List) detectorMap.get("inputs");
 
         assertEquals(2, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
@@ -1141,7 +1141,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         List<DetectorRule> detectorRules = List.of(new DetectorRule(randomDocRuleId));
         DetectorInput input = new DetectorInput("windows detector for security analytics", List.of("windows"), detectorRules,
-                emptyList());
+                Collections.emptyList());
         Detector detector = randomDetectorWithInputs(List.of(input));
 
         Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
@@ -1169,7 +1169,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
                 "}";
         List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
         SearchHit hit = hits.get(0);
-        Map<String, Object> detectorMap = (HashMap<String, Object>) (hit.getSourceAsMap().get("detector"));
+        Map<String, Object> detectorMap = (HashMap<String, Object>)(hit.getSourceAsMap().get("detector"));
         List<String> monitorIds = ((List<String>) (detectorMap).get("monitor_id"));
         assertEquals(1, monitorIds.size());
 
@@ -1184,7 +1184,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         assertEquals("Update detector failed", RestStatus.OK, restStatus(updateResponse));
         hits = executeSearch(Detector.DETECTORS_INDEX, request);
         hit = hits.get(0);
-        detectorMap = (HashMap<String, Object>) (hit.getSourceAsMap().get("detector"));
+        detectorMap = (HashMap<String, Object>)(hit.getSourceAsMap().get("detector"));
 
         // Verify that the workflow for the given detector is not added
         assertTrue("Workflow created", ((List<String>) detectorMap.get("workflow_ids")).size() == 0);
@@ -1212,13 +1212,13 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         String testOpCode = "Test";
 
-        String maxRuleId = createRule(randomAggregationRule("max", " > 3", testOpCode));
+        String maxRuleId =  createRule(randomAggregationRule("max", " > 3", testOpCode));
         String randomDocRuleId = createRule(randomRule());
         List<DetectorRule> detectorRules = List.of(new DetectorRule(maxRuleId), new DetectorRule(randomDocRuleId));
-        DetectorTrigger t1 = new DetectorTrigger(null, "test-trigger", "1", List.of(), List.of(randomDocRuleId, maxRuleId), List.of(), List.of(), List.of(), List.of());
+        DetectorTrigger t1 = new DetectorTrigger(null, "test-trigger", "1", List.of(), List.of(randomDocRuleId, maxRuleId), List.of(), List.of(), List.of());
 
         DetectorInput input = new DetectorInput("windows detector for security analytics", List.of("windows"), detectorRules,
-                emptyList());
+                Collections.emptyList());
         Detector detector = randomDetectorWithInputsAndTriggers(List.of(input), List.of(t1));
 
         Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
@@ -1246,7 +1246,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
                 "}";
         List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
         SearchHit hit = hits.get(0);
-        Map<String, Object> detectorMap = (HashMap<String, Object>) (hit.getSourceAsMap().get("detector"));
+        Map<String, Object> detectorMap = (HashMap<String, Object>)(hit.getSourceAsMap().get("detector"));
         List inputArr = (List) detectorMap.get("inputs");
 
         assertEquals(2, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
@@ -1261,14 +1261,14 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         verifyWorkflow(detectorMap, monitorIds, 3);
 
         // Update detector - remove one agg rule; Verify workflow
-        DetectorInput newInput = new DetectorInput("windows detector for security analytics", List.of("windows"), Arrays.asList(new DetectorRule(randomDocRuleId)), getRandomPrePackagedRules().stream().map(DetectorRule::new).collect(Collectors.toList()));
+        DetectorInput newInput = new DetectorInput("windows detector for security analytics", List.of("windows"), Arrays.asList(new DetectorRule(randomDocRuleId)) , getRandomPrePackagedRules().stream().map(DetectorRule::new).collect(Collectors.toList()));
         detector = randomDetectorWithInputs(List.of(newInput));
         createResponse = makeRequest(client(), "PUT", SecurityAnalyticsPlugin.DETECTOR_BASE_URI + "/" + detectorId, Collections.emptyMap(), toHttpEntity(detector));
 
         assertEquals("Update detector failed", RestStatus.OK, restStatus(createResponse));
         hits = executeSearch(Detector.DETECTORS_INDEX, request);
         hit = hits.get(0);
-        detectorMap = (HashMap<String, Object>) (hit.getSourceAsMap().get("detector"));
+        detectorMap = (HashMap<String, Object>)(hit.getSourceAsMap().get("detector"));
         inputArr = (List) detectorMap.get("inputs");
 
         assertEquals(1, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
@@ -1302,13 +1302,13 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         assertNotNull(getFindingsBody);
         assertEquals(1, getFindingsBody.get("total_findings"));
 
-        String findingDetectorId = ((Map<String, Object>) ((List) getFindingsBody.get("findings")).get(0)).get("detectorId").toString();
+        String findingDetectorId = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("detectorId").toString();
         assertEquals(detectorId, findingDetectorId);
 
-        String findingIndex = ((Map<String, Object>) ((List) getFindingsBody.get("findings")).get(0)).get("index").toString();
+        String findingIndex = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("index").toString();
         assertEquals(index, findingIndex);
 
-        List<Map<String, Object>> findings = (List) getFindingsBody.get("findings");
+        List<Map<String, Object>> findings = (List)getFindingsBody.get("findings");
 
         assertEquals(1, findings.size());
         List<String> findingDocs = (List<String>) findings.get(0).get("related_doc_ids");
@@ -1336,13 +1336,13 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         String testOpCode = "Test";
 
-        String maxRuleId = createRule(randomAggregationRule("max", " > 3", testOpCode));
+        String maxRuleId =  createRule(randomAggregationRule("max", " > 3", testOpCode));
         String randomDocRuleId = createRule(randomRule());
 
         List<DetectorRule> detectorRules = List.of(new DetectorRule(maxRuleId), new DetectorRule(randomDocRuleId));
-        DetectorTrigger t1 = new DetectorTrigger(null, "test-trigger", "1", List.of(), List.of(randomDocRuleId, maxRuleId), List.of(), List.of(), List.of(), List.of());
+        DetectorTrigger t1 = new DetectorTrigger(null, "test-trigger", "1", List.of(), List.of(randomDocRuleId, maxRuleId), List.of(), List.of(), List.of());
         DetectorInput input = new DetectorInput("windows detector for security analytics", List.of("windows"), detectorRules,
-                emptyList());
+                Collections.emptyList());
         Detector detector = randomDetectorWithInputsAndTriggers(List.of(input), List.of(t1));
 
         Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
@@ -1370,7 +1370,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
                 "}";
         List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
         SearchHit hit = hits.get(0);
-        Map<String, Object> detectorMap = (HashMap<String, Object>) (hit.getSourceAsMap().get("detector"));
+        Map<String, Object> detectorMap = (HashMap<String, Object>)(hit.getSourceAsMap().get("detector"));
         List inputArr = (List) detectorMap.get("inputs");
 
         assertEquals(2, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
@@ -1405,14 +1405,14 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         String testOpCode = "Test";
 
-        String maxRuleId = createRule(randomAggregationRule("max", " > 3", testOpCode));
+        String maxRuleId =  createRule(randomAggregationRule("max", " > 3", testOpCode));
         String randomDocRuleId = createRule(randomRule());
 
         List<DetectorRule> detectorRules = List.of(new DetectorRule(maxRuleId), new DetectorRule(randomDocRuleId));
         DetectorTrigger t1, t2;
-        t1 = new DetectorTrigger(null, "test-trigger", "1", List.of(), List.of(randomDocRuleId, maxRuleId), List.of(), List.of(), List.of(), List.of());
+        t1 = new DetectorTrigger(null, "test-trigger", "1", List.of(), List.of(randomDocRuleId, maxRuleId), List.of(), List.of(), List.of());
         DetectorInput input = new DetectorInput("windows detector for security analytics", List.of("windows"), detectorRules,
-                emptyList());
+                Collections.emptyList());
         Detector detector = randomDetectorWithInputsAndTriggers(List.of(input), List.of(t1));
 
         Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
@@ -1440,7 +1440,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
                 "}";
         List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
         SearchHit hit = hits.get(0);
-        Map<String, Object> detectorMap = (HashMap<String, Object>) (hit.getSourceAsMap().get("detector"));
+        Map<String, Object> detectorMap = (HashMap<String, Object>)(hit.getSourceAsMap().get("detector"));
         List inputArr = (List) detectorMap.get("inputs");
 
         assertEquals(2, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
@@ -1485,21 +1485,21 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         assertNotNull(getFindingsBody);
         assertEquals(6, getFindingsBody.get("total_findings"));
 
-        String findingDetectorId = ((Map<String, Object>) ((List) getFindingsBody.get("findings")).get(0)).get("detectorId").toString();
+        String findingDetectorId = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("detectorId").toString();
         assertEquals(detectorId, findingDetectorId);
 
-        String findingIndex = ((Map<String, Object>) ((List) getFindingsBody.get("findings")).get(0)).get("index").toString();
+        String findingIndex = ((Map<String, Object>)((List)getFindingsBody.get("findings")).get(0)).get("index").toString();
         assertEquals(index, findingIndex);
 
         List<String> docLevelFinding = new ArrayList<>();
-        List<Map<String, Object>> findings = (List) getFindingsBody.get("findings");
+        List<Map<String, Object>> findings = (List)getFindingsBody.get("findings");
 
         Set<String> docLevelRules = new HashSet<>(List.of(randomDocRuleId));
-        for (Map<String, Object> finding : findings) {
+        for(Map<String, Object> finding : findings) {
             List<Map<String, Object>> queries = (List<Map<String, Object>>) finding.get("queries");
             Set<String> findingRules = queries.stream().map(it -> it.get("id").toString()).collect(Collectors.toSet());
             // In this test case all doc level rules are matching the finding rule ids
-            if (docLevelRules.containsAll(findingRules)) {
+            if(docLevelRules.containsAll(findingRules)) {
                 docLevelFinding.addAll((List<String>) finding.get("related_doc_ids"));
             } else {
                 List<String> findingDocs = (List<String>) finding.get("related_doc_ids");
@@ -1533,10 +1533,10 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
         // 5 custom aggregation rules
         String sumRuleId = createRule(randomAggregationRule("sum", " > 1", infoOpCode));
-        String maxRuleId = createRule(randomAggregationRule("max", " > 3", testOpCode));
-        String minRuleId = createRule(randomAggregationRule("min", " > 3", testOpCode));
-        String avgRuleId = createRule(randomAggregationRule("avg", " > 3", infoOpCode));
-        String cntRuleId = createRule(randomAggregationRule("count", " > 3", "randomTestCode"));
+        String maxRuleId =  createRule(randomAggregationRule("max", " > 3", testOpCode));
+        String minRuleId =  createRule(randomAggregationRule("min", " > 3", testOpCode));
+        String avgRuleId =  createRule(randomAggregationRule("avg", " > 3", infoOpCode));
+        String cntRuleId =  createRule(randomAggregationRule("count", " > 3", "randomTestCode"));
         String randomDocRuleId = createRule(randomRule());
         List<String> prepackagedRules = getRandomPrePackagedRules();
 
@@ -1546,8 +1546,8 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         DetectorInput input = new DetectorInput("windows detector for security analytics", List.of("windows"), detectorRules,
                 prepackagedRules.stream().map(DetectorRule::new).collect(Collectors.toList()));
         DetectorTrigger t1, t2;
-        t1 = new DetectorTrigger(null, "test-trigger", "1", List.of(), List.of(sumRuleId, maxRuleId), List.of(), List.of(), List.of(), List.of());
-        t2 = new DetectorTrigger(null, "test-trigger", "1", List.of(), List.of(minRuleId, avgRuleId, cntRuleId), List.of(), List.of(), List.of(), List.of());
+        t1 = new DetectorTrigger(null, "test-trigger", "1", List.of(), List.of(sumRuleId, maxRuleId), List.of(), List.of(), List.of());
+        t2 = new DetectorTrigger(null, "test-trigger", "1", List.of(), List.of(minRuleId, avgRuleId, cntRuleId), List.of(), List.of(), List.of());
         Detector detector = randomDetectorWithInputsAndTriggers(List.of(input), List.of(t1, t2));
 
         Response createResponse = makeRequest(client(), "POST", SecurityAnalyticsPlugin.DETECTOR_BASE_URI, Collections.emptyMap(), toHttpEntity(detector));
@@ -1575,7 +1575,7 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
                 "}";
         List<SearchHit> hits = executeSearch(Detector.DETECTORS_INDEX, request);
         SearchHit hit = hits.get(0);
-        Map<String, Object> detectorMap = (HashMap<String, Object>) (hit.getSourceAsMap().get("detector"));
+        Map<String, Object> detectorMap = (HashMap<String, Object>)(hit.getSourceAsMap().get("detector"));
         List inputArr = (List) detectorMap.get("inputs");
 
         assertEquals(6, ((Map<String, Map<String, List>>) inputArr.get(0)).get("detector_input").get("custom_rules").size());
@@ -1620,19 +1620,19 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
         for (Map<String, Object> runResult : monitorRunResults) {
             String monitorName = runResult.get("monitor_name").toString();
             String monitorId = monitorNameToIdMap.get(monitorName);
-            if (monitorId.equals(docMonitorId)) {
+            if(monitorId.equals(docMonitorId)){
                 int noOfSigmaRuleMatches = ((List<Map<String, Object>>) ((Map<String, Object>) runResult.get("input_results")).get("results")).get(0).size();
                 // 5 prepackaged and 1 custom doc level rule
                 assertEquals(6, noOfSigmaRuleMatches);
-            } else if (monitorId.equals(chainedFindingsMonitorId)) {
+            } else if(monitorId.equals(chainedFindingsMonitorId)) {
 
             } else {
                 Map<String, Object> trigger_results = (Map<String, Object>) runResult.get("trigger_results");
                 if (trigger_results.containsKey(maxRuleId)) {
                     assertRuleMonitorFinding(runResult, maxRuleId, 5, List.of("2", "3"));
-                } else if (trigger_results.containsKey(sumRuleId)) {
+                } else if( trigger_results.containsKey(sumRuleId)) {
                     assertRuleMonitorFinding(runResult, sumRuleId, 3, List.of("4"));
-                } else if (trigger_results.containsKey(minRuleId)) {
+                } else if( trigger_results.containsKey(minRuleId)) {
                     assertRuleMonitorFinding(runResult, minRuleId, 5, List.of("2"));
                 }
             }
@@ -1650,11 +1650,11 @@ public class DetectorMonitorRestApiIT extends SecurityAnalyticsRestTestCase {
 
 
     private static void assertRuleMonitorFinding(Map<String, Object> executeResults, String ruleId, int expectedDocCount, List<String> expectedTriggerResult) {
-        List<Map<String, Object>> buckets = ((List<Map<String, Object>>) (((Map<String, Object>) ((Map<String, Object>) ((Map<String, Object>) ((List<Object>) ((Map<String, Object>) executeResults.get("input_results")).get("results")).get(0)).get("aggregations")).get("result_agg")).get("buckets")));
-        Integer docCount = buckets.stream().mapToInt(it -> (Integer) it.get("doc_count")).sum();
+        List<Map<String, Object>> buckets = ((List<Map<String, Object>>)(((Map<String, Object>)((Map<String, Object>)((Map<String, Object>)((List<Object>)((Map<String, Object>) executeResults.get("input_results")).get("results")).get(0)).get("aggregations")).get("result_agg")).get("buckets")));
+        Integer docCount = buckets.stream().mapToInt(it -> (Integer)it.get("doc_count")).sum();
         assertEquals(expectedDocCount, docCount.intValue());
 
-        List<String> triggerResultBucketKeys = ((Map<String, Object>) ((Map<String, Object>) ((Map<String, Object>) executeResults.get("trigger_results")).get(ruleId)).get("agg_result_buckets")).keySet().stream().collect(Collectors.toList());
+        List<String> triggerResultBucketKeys = ((Map<String, Object>)((Map<String, Object>) ((Map<String, Object>)executeResults.get("trigger_results")).get(ruleId)).get("agg_result_buckets")).keySet().stream().collect(Collectors.toList());
         Assert.assertEquals(expectedTriggerResult, triggerResultBucketKeys);
     }
 }
